kubernetes/36/02-hello-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: hello
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hello.pablokbs.com
    external-dns.alpha.kubernetes.io/ttl: "30"
spec:
  selector:
    app: hello
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
